fixed off-centered empty state

--- a/webapp/channels/src/sass/components/_emoticons.scss
+++ b/webapp/channels/src/sass/components/_emoticons.scss
@@ -468,6 +468,13 @@ $emoji-footer-height: $emoji-footer-border-width + $emoji-half-height + $emoji-p
     padding-block: 4px;
     padding-inline: 0px;
 
+    &:has(.no-results__wrapper) {
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     &.gif-picker__items {
         display: flex;
         height: 380px;
